--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,5 @@ jobs:
       - name: Clone down repository
         uses: actions/checkout@v4       
       - run: chmod +x ci/build-app.sh && ci/build-app.sh
+      - name: Test
+        run: ci/unit-test-app..sh
