--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,20 @@ jobs:
         with:
           name: code
           path: .
+  Linting:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    steps:
+      - name: Download Code
+        uses: actions/download-artifact@v4
+        with:
+          path: .
+          name: code
+      - name: run linting
+        uses: super-linter/super-linter/slim@latest
+        env:
+          DEFAULT_BRANCH: main
+          #DISABLE_ERRORS: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    
