--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,26 @@ jobs:
           DEFAULT_BRANCH: main
           DISABLE_ERRORS: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  Docker-image:
+     runs-on: ubuntu-latest
+     needs: [Build]
+     permissions:
+       packages: write
+     env:
+      docker_username: ${{ github.actor }}
+      docker_password: ${{ secrets.GITHUB_TOKEN }}
+      GIT_COMMIT: ${{ github.GITHUB_SHA }}
+
+     steps:
+        - name: Download Code
+          uses: actions/download-artifact@v4
+          with:
+            path: .
+            name: code
+        - name: build docker
+          run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+        - name: push docker
+          run: chmod +x ci/push-docker.sh && ci/push-docker.sh
+       
         
     
