--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,25 @@ jobs:
           run: chmod +x ci/build-docker.sh && ci/build-docker.sh
         - name: push docker
           run: chmod +x ci/push-docker.sh && ci/push-docker.sh
+  
+  Component-test:
+    runs-on: ubuntu-latest
+    needs: [Docker-image]
+    steps:
+      - name: Download Code
+        uses: actions/download-artifact@v4
+        with:
+          path: .
+          name: code
+      - name: exec comp test
+        run: chmod +x ci/component-test.sh && ci/component-test.sh 
+
+  Performance-test:
+    runs-on: ubuntu-latest
+    needs: [Docker-image]
+    steps:
+      - name: exec perf test
+        run: chmod +x ci/performance-test.sh && ci/performance-test.sh
        
         
     
