--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Docker-image]
     steps:
+      - name: Download Code
+        uses: actions/download-artifact@v4
+        with:
+          path: .
+          name: code
       - name: exec perf test
         run: chmod +x ci/performance-test.sh && ci/performance-test.sh
        
