--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,9 @@ jobs:
   Component-test:
     runs-on: ubuntu-latest
     needs: [Docker-image]
+    env:
+      docker_username: ${{ github.actor }}
+      docker_password: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Download Code
         uses: actions/download-artifact@v4
@@ -66,6 +69,9 @@ jobs:
   Performance-test:
     runs-on: ubuntu-latest
     needs: [Docker-image]
+    env:
+      docker_username: ${{ github.actor }}
+      docker_password: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Download Code
         uses: actions/download-artifact@v4
