--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,85 +1,33 @@
-name: Main workflow
+name: Java CI
 on: push
 jobs:
-  Build:
+  Clone-down:
+    name: Clone down repo
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-      - name: Clone down repository
-        uses: actions/checkout@v4       
-      - run: chmod +x ci/build-app.sh && ci/build-app.sh
-      - name: Test
-        run: ci/unit-test-app.sh
+    - uses: actions/checkout@v4
+    - name: Upload Repo
+      uses: actions/upload-artifact@v3
+      with:
+        name: code
+        path: .
+  Build:
+      runs-on: ubuntu-latest
+      needs: Clone-down
+      container: gradle:6-jdk11
+      steps:
+      - name: Download code
+        uses: actions/download-artifact@v3
+        with:
+          name: code
+          path: .
+      - name: Build with Gradle
+        run: chmod +x ci/build-app.sh && ci/build-app.sh
+      - name: Test with Gradle
+        run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
       - name: Upload Repo
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: code
           path: .
-  Linting:
-    runs-on: ubuntu-latest
-    needs: [Build]
-    steps:
-      - name: Download Code
-        uses: actions/download-artifact@v4
-        with:
-          path: .
-          name: code
-      - name: run linting
-        uses: super-linter/super-linter/slim@latest
-        env:
-          DEFAULT_BRANCH: main
-          DISABLE_ERRORS: true
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  Docker-image:
-     runs-on: ubuntu-latest
-     needs: [Build]
-     permissions:
-       packages: write
-     env:
-      docker_username: ${{ github.actor }}
-      docker_password: ${{ secrets.GITHUB_TOKEN }}
-      GIT_COMMIT: ${{ github.GITHUB_SHA }}
-
-     steps:
-        - name: Download Code
-          uses: actions/download-artifact@v4
-          with:
-            path: .
-            name: code
-        - name: build docker
-          run: chmod +x ci/build-docker.sh && ci/build-docker.sh
-        - name: push docker
-          run: chmod +x ci/push-docker.sh && ci/push-docker.sh
-  
-  Component-test:
-    runs-on: ubuntu-latest
-    needs: [Docker-image]
-    env:
-      docker_username: ${{ github.actor }}
-      docker_password: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - name: Download Code
-        uses: actions/download-artifact@v4
-        with:
-          path: .
-          name: code
-      - name: exec comp test
-        run: chmod +x ci/component-test.sh && ci/component-test.sh 
-
-  Performance-test:
-    runs-on: ubuntu-latest
-    needs: [Docker-image]
-    env:
-      docker_username: ${{ github.actor }}
-      docker_password: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - name: Download Code
-        uses: actions/download-artifact@v4
-        with:
-          path: .
-          name: code
-      - name: exec perf test
-        run: chmod +x ci/performance-test.sh && ci/performance-test.sh
-       
-        
-    
