--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,11 +7,15 @@ jobs:
     container: gradle:6-jdk11
     steps:
     - uses: actions/checkout@v4
-    - name: Upload Repo
-      uses: actions/upload-artifact@v3
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
       with:
-        name: code
-        path: .
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
   Build:
     runs-on: ubuntu-latest
     needs: Clone-down
@@ -21,11 +25,6 @@ jobs:
     container:
       image: ${{ matrix.container }}   
     steps:
-    - name: Download code
-      uses: actions/download-artifact@v3
-      with:
-        name: code
-        path: .
     - name: Build with Gradle
       run: chmod +x ci/build-app.sh && ci/build-app.sh
     - name: Upload Repo
