--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Main workflow
+
 on:
   push:
     branches:
@@ -6,57 +7,66 @@ on:
   pull_request:
     branches:
       - main
+
 jobs:
   Build:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-      - name: Clone down repository
-        uses: actions/checkout@v4       
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Cache code
+        uses: actions/cache@v3
+        with:
+          path: |
+            .
+          key: ${{ runner.os }}-code-${{ github.sha }}
       - run: chmod +x ci/build-app.sh && ci/build-app.sh
       - name: Test
         run: ci/unit-test-app.sh
-      - name: Upload Repo
-        uses: actions/upload-artifact@v4
-        with:
-          name: code
-          path: .
+
   Linting:
     runs-on: ubuntu-latest
     needs: [Build]
     steps:
-      - name: Download Code
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Cache code
+        uses: actions/cache@v3
         with:
-          path: .
-          name: code
-      - name: run linting
+          path: |
+            .
+          key: ${{ runner.os }}-code-${{ github.sha }}
+      - name: Run linting
         uses: super-linter/super-linter/slim@latest
         env:
           DEFAULT_BRANCH: main
           DISABLE_ERRORS: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   Docker-image:
-     runs-on: ubuntu-latest
-     needs: [Build]
-     permissions:
-       packages: write
-     env:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions:
+      packages: write
+    env:
       docker_username: ${{ github.actor }}
       docker_password: ${{ secrets.GITHUB_TOKEN }}
-      GIT_COMMIT: ${{ github.GITHUB_SHA }}
+      GIT_COMMIT: ${{ github.sha }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Cache code
+        uses: actions/cache@v3
+        with:
+          path: |
+            .
+          key: ${{ runner.os }}-code-${{ github.sha }}
+      - name: Build docker
+        run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+      - name: Push docker
+        run: chmod +x ci/push-docker.sh && ci/push-docker.sh
 
-     steps:
-        - name: Download Code
-          uses: actions/download-artifact@v4
-          with:
-            path: .
-            name: code
-        - name: build docker
-          run: chmod +x ci/build-docker.sh && ci/build-docker.sh
-        - name: push docker
-          run: chmod +x ci/push-docker.sh && ci/push-docker.sh
-  
   Component-test:
     runs-on: ubuntu-latest
     needs: [Docker-image]
@@ -64,12 +74,15 @@ jobs:
       docker_username: ${{ github.actor }}
       docker_password: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Download Code
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Cache code
+        uses: actions/cache@v3
         with:
-          path: .
-          name: code
-      - name: exec comp test
+          path: |
+            .
+          key: ${{ runner.os }}-code-${{ github.sha }}
+      - name: Execute component test
         run: chmod +x ci/component-test.sh && ci/component-test.sh 
 
   Performance-test:
@@ -79,13 +92,13 @@ jobs:
       docker_username: ${{ github.actor }}
       docker_password: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - name: Download Code
-        uses: actions/download-artifact@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Cache code
+        uses: actions/cache@v3
         with:
-          path: .
-          name: code
-      - name: exec perf test
+          path: |
+            .
+          key: ${{ runner.os }}-code-${{ github.sha }}
+      - name: Execute performance test
         run: chmod +x ci/performance-test.sh && ci/performance-test.sh
-       
-        
-    
