--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,15 +7,11 @@ jobs:
     container: gradle:6-jdk11
     steps:
     - uses: actions/checkout@v4
-    - name: Cache Gradle packages
-      uses: actions/cache@v3
+    - name: Upload Repo
+      uses: actions/upload-artifact@v3
       with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+        name: code
+        path: .
   Build:
     runs-on: ubuntu-latest
     needs: Clone-down
@@ -25,7 +21,15 @@ jobs:
     container:
       image: ${{ matrix.container }}   
     steps:
-    - uses: actions/checkout@v4
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
     - name: Build with Gradle
       run: chmod +x ci/build-app.sh && ci/build-app.sh
     - name: Upload Repo
@@ -33,3 +37,4 @@ jobs:
       with:
         name: code
         path: .
+ 
